--- a/tests/response.html
+++ b/tests/response.html
@@ -5,5 +5,6 @@
 		<div class="asd ajlkl AdRight2">multiple classes that should be removed</div>
 		<div class="asd ajlkl"> multiple classes that should exist </div>
 		<div id="MyAdsId3">id should be removed</div>
+		<div data-ad-manager-id class="success-valid-class">name-only attibute should be removed</div>
 	</body>
 </html>
