--- a/tests/response.html
+++ b/tests/response.html
@@ -6,5 +6,11 @@
 		<div class="asd ajlkl"> multiple classes that should exist </div>
 		<div id="MyAdsId3">id should be removed</div>
 		<div data-ad-manager-id class="success-valid-class">name-only attibute should be removed</div>
+		<div data-role="tile-ads-module" class="success-valid-class">exact match attibute should be removed</div>
+		<div onclick="foo_content.ad/-asd">1. contain match attribute should be removed</div>
+		<div onclick="content.ad/">2. contain match attribute should be removed</div>
+		<div class="adDisplay-module_foobar">1. startswith match attribute should be removed</div>
+		<div class="adDisplay-modul">startswith match attribute should be exist</div>
+		<div onclick="location.href='http://www.reimageplus.com/foobar'">2. startswith match attribute should be removed</div>
 	</body>
 </html>
