fix test as filter was removed with 2e52f3f578 from easylist
Signed-off-by: Andrwe Lord Weber <github@andrwe.org>

--- a/tests/response.html
+++ b/tests/response.html
@@ -11,6 +11,6 @@
 		<div onclick="content.ad/">2. contain match attribute should be removed</div>
 		<div class="adDisplay-module_foobar">1. startswith match attribute should be removed</div>
 		<div class="adDisplay-modul">startswith match attribute should be exist</div>
-		<div onclick="location.href='http://www.reimageplus.com/foobar'">2. startswith match attribute should be removed</div>
+		<div href="https://www.reimageplus.com/foobar">2. startswith match attribute should be removed</div>
 	</body>
 </html>
