improve test-suite
Signed-off-by: Andrwe@Gitlab <alw+gitlab@andrwe.org>

--- a/tests/response.html
+++ b/tests/response.html
@@ -6,6 +6,7 @@
 		<div class="asd ajlkl"> multiple classes that should exist </div>
 		<div id="MyAdsId3">id should be removed</div>
 		<div data-ad-manager-id class="success-valid-class">name-only attibute should be removed</div>
+		<div data-freestar-ad id>combined name-only attibute should be removed</div>
 		<div data-role="tile-ads-module" class="success-valid-class">exact match attibute should be removed</div>
 		<div onclick="foo_content.ad/-asd">1. contain match attribute should be removed</div>
 		<div onclick="content.ad/">2. contain match attribute should be removed</div>
